# formation-python-filerouge

./: .gitignore  README.md
annexes/: GLOSSAIRE_DEVOPS.md  GLOSSAIRE_PYTHON.md  MATRICE_COMPETENCES.md  RESSOURCES.md
exercices/: README.md
exercices/challenges/module_02/: exercice_seismes.py
exercices/solutions/module_02/: exercice_seismes.py
modules/01-introduction/: README.md
modules/02-bases-python/: README.md
modules/03-architecture/: README.md
modules/04-collecte-api/: README.md
modules/05-validation-donnees/: README.md
modules/06-stockage/: README.md
modules/07-streamlit/: README.md
modules/08-cli-typer/: README.md
modules/09-fastapi/: README.md
modules/10-tests-qualite/: README.md
modules/11-docker-deploiement/: README.md
modules/12-bonus/: README.md
modules/13-git-github/: README.md
modules/14-ci-cd/: README.md
modules/15-self-hosted/: README.md
plans/: PLAN.md
projet/: pyproject.toml
projet/karukera_alertes/: __init__.py  config.py
projet/karukera_alertes/collectors/: __init__.py  base.py  earthquake.py
projet/karukera_alertes/models/: __init__.py  alerts.py  base.py  earthquake.py
projet/karukera_alertes/storage/: __init__.py  sqlite_store.py
specs/: ALERTS.md  API_SPEC.md  SPEC.md  UI_SPEC.md
tasks/: TASKS.md
terraform/: terraform.tfvars  variables.tf
